# kotti-he-oide

./: AGENTS.md  CLAUDE.md  TECH.md  TODO.md  TODO_FRONTEND.md  buf.gen.yaml  buf.yaml
.github/workflows/: frontend-deploy.yml  infra-plan.yml  microservice-deploy.yml  server-deploy.yml
.kiro/specs/image-recognition-service/: design.md  requirements.md  tasks.md
.kiro/steering/: product.md  structure.md  tech.md
frontend/: CAMERA_memo.md  Dockerfile
frontend/public/: manifest.json  sw.js
frontend/src/app/: layout.tsx  page.tsx
frontend/src/app/camera-filters/: filters.ts  noise.ts  page.tsx  (+1 more)
frontend/src/hooks/: useNotificationPermission.ts  usePushNotification.ts
frontend/src/types/: api.ts  push.ts
infra/: README.md  acm.tf  alb.tf  backend.tf  ecr.tf  ecs_cluster.tf  ecs_services_api.tf  ecs_services_microservice.tf  ecs_services_web.tf  outputs.tf  providers.tf  rds.tf  s3.tf  security.tf  variables.tf  vpc.tf
schema/proto/: README.md
server/: Dockerfile  Makefile  go.mod  go.sum  main.go  schema.sql
server/cmd/server/: main.go
server/pkg/errors/: domain_error.go
services/: README.md
services/image_recognition/: .dockerignore  .gitignore  Dockerfile  Makefile  README.md  pyproject.toml
services/image_recognition/app/: __init__.py  server.py
services/image_recognition/app/models/: __init__.py  types.py
services/image_recognition/app/services/: __init__.py  image_service.py  s3_service.py
services/image_recognition/app/utils/: __init__.py  config.py  image_processor.py  logger.py
services/image_recognition/tests/: test_similarity.py
(+44 files in other folders)
