[project]
name = "image-recognition"
version = "0.1.0"
description = "Image recognition microservice (FastAPI)"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [
  { name = "kotti-he-oide team" }
]
dependencies = [
  "fastapi>=0.112,<1.0",
  "uvicorn>=0.30,<1.0",
  "pydantic>=2.7,<3.0",
  "grpcio>=1.62",
  "grpcio-tools>=1.62"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.2",
  "httpx>=0.27",
  "ruff>=0.5",
  "mypy>=1.10"
]

[tool.ruff]
line-length = 120
target-version = "py312"

[tool.mypy]
python_version = "3.12"
strict = false
warn_unused_configs = true
